# ygo-metadata-pipeline

./: .env.example  README.md  main.py  pyproject.toml
.github/workflows/: sync.yml
migrations/: 20260112_add_card_detail_columns.sql  20260113_create_ygo_banlist.sql
src/: __init__.py  clients.py  config.py  logging.py  models.py
src/pipelines/: __init__.py  sync_banlist.py  sync_cards.py  sync_cropped_images.py  sync_images.py
